# tic-tac-toe-game

./: .cookiecutter.json  .cruft.json  .dockerignore  .flake8  .flaskenv  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  LICENSE.rst  Makefile  README.md  README.rst  _docker-compose.override.yml  _docker-compose.yml  boot.sh  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  logging_setup.py  noxfile.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  tic-tac-toe.puml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
nginx/: Dockerfile  nginx.conf
src/: config.py  game.py  gunicorn.conf.py  logging_setup.py  package-lock.json  package.json  postcss.config.js
src/app/: __init__.py  __main__.py
src/app/main/: __init__.py  events.py  forms.py  routes.py
src/app/static/: style.css
src/app/static/src/: htmx.js  main.css
src/app/templates/: 404.html  500.html  board.html  board_multi.html  game.html  game_multi.html  index.html  index_socket.html  join_game.html  layout.html  multi_game.html  new_multi_game.html  session.html  tie.html  win.html
src/tic_tac_toe/: __main__.py
src/tic_tac_toe_game/: __init__.py  __main__.py  engine.py  errors.py  game.py  mcts_ai.py  negamax_ai.py  state.py  tictactoe.py  typing.py
src/tic_tac_toe_game/AI/: __init__.py  mcts.py  naive.py  negamax.py  random.py
tests/: __init__.py  test_engine.py  test_errors.py  test_game.py  test_main.py  test_state.py
