[tool.poetry]
name = "tic-tac-toe-game"
version = "0.0.0"
description = "Tic Tac Toe Game"
authors = ["Alexis Torelli <alexis.torelli.treanton@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/alexistli/tic-tac-toe-game"
repository = "https://github.com/alexistli/tic-tac-toe-game"
documentation = "https://tic-tac-toe-game.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/alexistli/tic-tac-toe-game/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
Flask-Session = "^0.4.0"
Flask-SocketIO = "^5.3.1"
eventlet = "^0.33.0"
mctspy = "^0.1.1"
easyAI = "^2.0.12"
Flask-Assets = "^2.0"
Flask-WTF = "^1.0.1"
redis = "^4.3.4"
structlog = "^22.1.0"
rich = "^12.5.1"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
cruft = "^2.11.1"
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.2.0"
mypy = "^0.981"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^5.2.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.8"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.23"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.3"
pre-commit-hooks = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^4.3.0"
Pygments = "^2.13.0"
pyupgrade = "^2.38.0"
furo = ">=2021.11.12"
rich = "^12.5.1"

[tool.poetry.scripts]
tic-tac-toe-game = "tic_tac_toe_game.__main__:main"
game = "app.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tic_tac_toe_game", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "easyAI.*",
    "mctspy.*",
    "eventlet.*",
    "flask_assets.*",
    "flask_session.*",
    "flask_socketio.*",
    "flask_wtf.*",
    "gunicorn.*",
    "logging_setup.*",
    "wtforms.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
