[tool.poetry]
name = "tic-tac-toe-game"
version = "0.2.0"
description = "Tic Tac Toe Game"
authors = ["Alexis Torelli <alexis.torelli.treanton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexistli/tic-tac-toe-game"
repository = "https://github.com/alexistli/tic-tac-toe-game"
documentation = "https://tic-tac-toe-game.readthedocs.io"
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.urls]
Changelog = "https://github.com/alexistli/tic-tac-toe-game/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
easyAI = "^2.0.12"
eventlet = "^0.33.3"
Flask = "^2.3.2"
Flask-Assets = "^2.0"
Flask-Migrate = "^4.0.4"
Flask-Session = "^0.5.0"
Flask-SocketIO = "^5.3.4"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
gunicorn = "^20.1.0"
mctspy = "^0.1.1"
python-dotenv = "^0.21.1"
redis = "^4.5.5"
rich = "^12.6.0"
sqlalchemy = "^2.0.15"
structlog = "^22.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = { extras = ["toml"], version = "^7.2.5" }
cruft = "^2.15.0"
darglint = "^1.8.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
flake8 = "^5.0.4"
furo = ">=2023.5.20"
isort = ">=5.12.0"
mypy = "^0.991"
myst-parser = "^1.0.0"
pep8-naming = "^0.13.3"
pre-commit = "^2.21.0"
pre-commit-hooks = "^4.4.0"
Pygments = "^2.15.1"
pytest = "^7.3.1"
pyupgrade = "^3.4.0"
reorder-python-imports = "^3.9.0"
rich = "^12.6.0"
safety = "^2.3.5"
sphinx = "6"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.4.0"
typeguard = "^2.13.3"
xdoctest = { extras = ["colors"], version = "^1.1.1" }

[tool.poetry.scripts]
tic-tac-toe-game = "tic_tac_toe_game.__main__:main"
game = "app.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tic_tac_toe_game", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "easyAI.*",
    "mctspy.*",
    "eventlet.*",
    "flask_assets.*",
    "flask_session.*",
    "flask_socketio.*",
    "flask_wtf.*",
    "gunicorn.*",
    "logging_setup.*",
    "wtforms.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
